--- a/components/style/style.less
+++ b/components/style/style.less
@@ -18,6 +18,9 @@
 @error-color-hover: #fa6b7e;
 @error-color-active: #e32d52;
 
+@theme-lightcolor: #e8f1ff;
+@theme-lightcolor-hover: #d9e8ff;
+
 // >>> text
 // 二级文字
 @text-color: #4e5464;
@@ -56,7 +59,7 @@
 @bg-container-1: #ffffff;
 
 // 二级容器背景
-@bg-container-2: #f7f8fa;
+@bg-container-2: @bg-page;
 
 // 组件背景灰
 @bg-component-1: #f7f8fa;
