--- a/components/checkbox/index.less
+++ b/components/checkbox/index.less
@@ -1,28 +1,41 @@
 @import '../style/index.less';
 
+.ant-checkbox-wrapper{
+  .ant-checkbox-input:focus + .ant-checkbox-inner {
+    border-color: @border-component;
+  }
+  .ant-checkbox .ant-checkbox-inner{
+    border-color: @border-component;
+  }
+  .ant-checkbox.ant-checkbox-indeterminate .ant-checkbox-inner{
+    border-color: @primary-color;
+  }
+  &:hover .ant-checkbox .ant-checkbox-inner{
+      border-color: @radio-checkbox-hover-color;
+  }
+  &:hover .ant-checkbox.ant-checkbox-indeterminate .ant-checkbox-inner{
+      border-color: @primary-color;
+  }
+}
+
+.ant-checkbox-wrapper.ant-checkbox-wrapper-checked{
+  .ant-checkbox.ant-checkbox-checked .ant-checkbox-inner{
+    border-color: @primary-color;
+  }
+  &:hover .ant-checkbox.ant-checkbox-checked .ant-checkbox-inner{
+    border-color: @primary-color;
+  }
+}
+
 .ant-checkbox-wrapper {
   font-family: @primary-font-family;
-  &:hover {
-    .ant-checkbox-inner {
-      border-color: @radio-checkbox-hover-color;
-    }
-  }
-  &.ant-checkbox-wrapper-checked {
-    &:hover {
-      .ant-checkbox-inner {
-        border-color: @primary-color;
-      }
-    }
-  }
-  .ant-checkbox-indeterminate {
-    .ant-checkbox-inner {
+  .ant-checkbox-indeterminate .ant-checkbox-inner {
       background-color: @primary-color;
       border-color: @primary-color;
       &::after {
         height: 2px;
         background-color: @bg-container-1;
       }
-    }
   }
   .ant-checkbox.ant-checkbox-disabled .ant-checkbox-inner {
     background-color: @bg-page;
