--- a/components/style/style.less
+++ b/components/style/style.less
@@ -21,6 +21,9 @@
 @theme-lightcolor: #e8f1ff;
 @theme-lightcolor-hover: #d9e8ff;
 
+// border-radius
+@border-radius-base: 4px;
+
 // >>> text
 // 二级文字
 @text-color: #4e5464;
@@ -78,6 +81,7 @@
 
 // 组件边框
 @border-component: #e8eaee;
+@border-color-base: @border-component;
 
 // 组件边框悬停
 @border-component-hover: #d6dae0;
