--- a/components/style/index.less
+++ b/components/style/index.less
@@ -1,3 +1,3 @@
-@import "~antd/es/style/themes/default.less";
-@import "~antd/dist/antd.less";
-@import "./style.less";
+// @import "~antd/es/style/themes/default.less";
+// @import "~antd/dist/antd.less";
+@import './style.less';
