--- a/components/Tree/index.less
+++ b/components/Tree/index.less
@@ -3,11 +3,12 @@
 .ant-tree {
   .ant-tree-treenode {
     width: 100%;
-    padding: 9px 16px;
+    padding: 8px 16px;
     border-radius: 5px;
     &:hover {
       background-color: @bg-page;
     }
+    border: none !important;
   }
   .ant-tree-node-content-wrapper {
     width: 100%;
@@ -26,24 +27,28 @@
   }
   .ant-tree-treenode-selected {
     background-color: @theme-lightcolor !important;
-    .ant-tree-show-line .ant-tree-switcher {
+    .ant-tree-switcher-icon, .ant-tree-switcher-noop {
       color: @primary-color !important;
     }
   }
 }
 
-.ant-tree-show-line .ant-tree-switcher {
+.ant-tree-switcher {
   margin-right: 16px;
   color: @text-color-placeholder;
-  background-color: inherit;
+  background-color: inherit !important;
 }
 
 .ant-tree-show-line .ant-tree-indent-unit::before {
-  top: -8px;
+  top: -9px;
   right: 22px;
   height: 42px;
 }
 
 .ant-tree-indent-unit {
-  width: 34px;
+  width: 32px;
+}
+
+.ant-tree-switcher-leaf-line::before {
+  height: 40px;
 }
