--- a/components/style/style.less
+++ b/components/style/style.less
@@ -65,7 +65,7 @@
 @bg-container-2: @bg-page;
 
 // 组件背景灰
-@bg-component-1: #f7f8fa;
+@bg-component-1: @bg-page;
 
 // 组件背景灰悬停
 @bg-component-1-hover: #e8eaee;
