--- a/components/tag/index.less
+++ b/components/tag/index.less
@@ -1,1 +1,44 @@
 @import '../style/index.less';
+
+.ant-tag {
+  background-color: @bg-page;
+  line-height: 24px;
+}
+.ant-tag-close-icon {
+  margin-left: 10px;
+}
+.ant-tag-success {
+  background: @success-color-active;
+  border: 1px solid @text-color-success;
+  color: #fff;
+  .ant-tag-close-icon {
+    color: #fff;
+  }
+}
+
+.ant-tag-processing {
+  background: @primary-color;
+  border: 1px solid @primary-color-active;
+  color: #fff;
+  .ant-tag-close-icon {
+    color: #fff;
+  }
+}
+
+.ant-tag-error {
+  background: @error-color;
+  border: 1px solid @error-color-active;
+  color: #fff;
+  .ant-tag-close-icon {
+    color: #fff;
+  }
+}
+
+.ant-tag-warning {
+  background: @warning-color;
+  border: 1px solid @warning-color-active;
+  color: #fff;
+  .ant-tag-close-icon {
+    color: #fff;
+  }
+}
