--- a/components/breadcrumb/index.less
+++ b/components/breadcrumb/index.less
@@ -1,8 +1,8 @@
-@import "../style/index.less";
+@import '../style/style.less';
 
 .ant-breadcrumb-separator {
-  color: #8792a4;
   display: inline-block;
+  color: #8792a4;
   transform: scale(0.9, 0.7) rotate(7deg);
 }
 .ant-breadcrumb-link a {
