--- a/components/button/index.less
+++ b/components/button/index.less
@@ -1,26 +1,26 @@
-@import '../style/index.less';
+@import '../style/style.less';
 
 .ant-btn-primary:hover,
 .ant-btn-primary:focus {
   color: #fff;
-  border-color: @primary-color-hover;
   background: @primary-color-hover;
+  border-color: @primary-color-hover;
 }
 
 .ant-btn-primary:active {
   color: #fff;
-  border-color: @primary-color-active;
   background: @primary-color-active;
+  border-color: @primary-color-active;
 }
 .ant-btn-dangerous.ant-btn-primary:hover,
 .ant-btn-dangerous.ant-btn-primary:focus {
   color: #fff;
-  border-color: @error-color-hover;
   background: @error-color-hover;
+  border-color: @error-color-hover;
 }
 
 .ant-btn-dangerous.ant-btn-primary:active {
   color: #fff;
-  border-color: @error-color-active;
   background: @error-color-active;
+  border-color: @error-color-active;
 }
