--- a/components/menu/index.less
+++ b/components/menu/index.less
@@ -1,8 +1,8 @@
-@import "../style/index.less";
+@import '../style/style.less';
 
 .ant-menu-root {
-  background-color: @bg-page;
   padding: 16px 12px;
+  background-color: @bg-page;
 }
 
 .ant-menu-item,
@@ -27,8 +27,8 @@
 .ant-menu-light {
   .ant-menu-submenu-title:hover,
   .ant-menu-item-only-child:hover {
-    background-color: @bg-component-1-hover;
     color: @text-color;
+    background-color: @bg-component-1-hover;
   }
 }
 
