--- a/components/tabs/index.less
+++ b/components/tabs/index.less
@@ -1,8 +1,8 @@
-@import '../style/index.less';
+@import '../style/style.less';
 
 .ant-tabs {
-  border-radius: 10px;
   padding: 0 24px;
+  border-radius: 10px;
   .ant-tabs-tab-active .ant-tabs-tab-btn {
     font-weight: 600;
     // border-bottom: 3px sol;
@@ -23,8 +23,8 @@
 
 // bar样式
 .ant-tabs-top > .ant-tabs-nav .ant-tabs-ink-bar {
-  border-radius: 4px;
   height: 3px;
+  border-radius: 4px;
 }
 
 // bar left
@@ -43,17 +43,17 @@
 }
 
 .ant-tabs-card.ant-tabs-top > .ant-tabs-nav .ant-tabs-tab {
-  border-radius: 10px 10px 0 0;
-  border: none;
-  padding: 12px 24px;
   box-sizing: border-box;
+  padding: 12px 24px;
+  border: none;
+  border-radius: 10px 10px 0 0;
 }
 
 .ant-tabs-card.ant-tabs-top > .ant-tabs-nav .ant-tabs-nav-add {
-  border-radius: 10px 10px 0 0;
-  border: none;
-  color: @text-color-3;
   margin-left: 4px;
+  color: @text-color-3;
+  border: none;
+  border-radius: 10px 10px 0 0;
   &:hover {
     color: @primary-color;
   }
@@ -68,8 +68,8 @@
 }
 
 .ant-tabs-tab-remove {
-  padding: 0;
   margin-left: 16px;
+  padding: 0;
   border: none;
 }
 
@@ -85,8 +85,8 @@
 
 // left
 .ant-tabs-left {
-  background-color: #fff;
   padding: 24px;
+  background-color: #fff;
 }
 .ant-tabs-left > .ant-tabs-nav .ant-tabs-tab {
   padding: 13px 44px 13px 16px;
@@ -94,8 +94,8 @@
 
 // right
 .ant-tabs-right {
-  background-color: #fff;
   padding: 24px;
+  background-color: #fff;
 }
 .ant-tabs-right > .ant-tabs-nav .ant-tabs-tab {
   padding: 13px 16px 13px 44x;
