--- a/components/checkbox/index.less
+++ b/components/checkbox/index.less
@@ -1,22 +1,22 @@
-@import '../style/index.less';
+@import '../style/style.less';
 
-.ant-checkbox-wrapper{
+.ant-checkbox-wrapper {
   font-family: @primary-font-family;
   // .ant-checkbox-input:focus + .ant-checkbox-inner {
   //   border-color: @border-component;
   // }
-  .ant-checkbox .ant-checkbox-inner{
+  .ant-checkbox .ant-checkbox-inner {
     border-color: @border-component;
   }
 
-  .ant-checkbox.ant-checkbox-checked .ant-checkbox-inner{
-    border-color: @primary-color;
+  .ant-checkbox.ant-checkbox-checked .ant-checkbox-inner {
     background-color: @primary-color;
+    border-color: @primary-color;
   }
 
-  .ant-checkbox.ant-checkbox-indeterminate .ant-checkbox-inner{
-    border-color: @primary-color;
+  .ant-checkbox.ant-checkbox-indeterminate .ant-checkbox-inner {
     background-color: @primary-color;
+    border-color: @primary-color;
     &::after {
       height: 2px;
       background-color: @bg-container-1;
@@ -31,7 +31,7 @@
       border-color: @text-color-placeholder;
     }
   }
-  
+
   .ant-checkbox.ant-checkbox-disabled.ant-checkbox-indeterminate .ant-checkbox-inner {
     background-color: @bg-page;
     border-color: @border-component !important;
@@ -41,23 +41,21 @@
     }
   }
 
-  &:hover .ant-checkbox .ant-checkbox-inner{
-      border-color: @radio-checkbox-hover-color;
+  &:hover .ant-checkbox .ant-checkbox-inner {
+    border-color: @radio-checkbox-hover-color;
   }
 
-  &:hover .ant-checkbox.ant-checkbox-indeterminate .ant-checkbox-inner{
-      border-color: @primary-color;
+  &:hover .ant-checkbox.ant-checkbox-indeterminate .ant-checkbox-inner {
+    border-color: @primary-color;
   }
 }
 
-
-
 // 选中
-.ant-checkbox-wrapper.ant-checkbox-wrapper-checked{
-  .ant-checkbox-checked::after{
+.ant-checkbox-wrapper.ant-checkbox-wrapper-checked {
+  .ant-checkbox-checked::after {
     border-color: @primary-color;
   }
-  &:hover .ant-checkbox.ant-checkbox-checked .ant-checkbox-inner{
+  &:hover .ant-checkbox.ant-checkbox-checked .ant-checkbox-inner {
     border-color: @primary-color;
   }
 }
