--- a/components/tag/index.less
+++ b/components/tag/index.less
@@ -1,43 +1,43 @@
-@import '../style/index.less';
+@import '../style/style.less';
 
 .ant-tag {
-  background-color: @bg-page;
   line-height: 24px;
+  background-color: @bg-page;
 }
 .ant-tag-close-icon {
   margin-left: 10px;
 }
 .ant-tag-success {
+  color: #fff;
   background: @success-color-active;
   border: 1px solid @text-color-success;
-  color: #fff;
   .ant-tag-close-icon {
     color: #fff;
   }
 }
 
 .ant-tag-processing {
+  color: #fff;
   background: @primary-color;
   border: 1px solid @primary-color-active;
-  color: #fff;
   .ant-tag-close-icon {
     color: #fff;
   }
 }
 
 .ant-tag-error {
+  color: #fff;
   background: @error-color;
   border: 1px solid @error-color-active;
-  color: #fff;
   .ant-tag-close-icon {
     color: #fff;
   }
 }
 
 .ant-tag-warning {
+  color: #fff;
   background: @warning-color;
   border: 1px solid @warning-color-active;
-  color: #fff;
   .ant-tag-close-icon {
     color: #fff;
   }
