--- a/components/radio/index.less
+++ b/components/radio/index.less
@@ -45,10 +45,8 @@
 }
 
 .ant-radio-group {
-  display: flex;
-  align-items: center;
   height: 40px;
-  padding: 0px 4px;
+  padding: 4px;
   font-family: @primary-font-family;
   background-color: @bg-page;
   border-radius: 5px;
@@ -71,7 +69,13 @@
       color: @primary-color;
       font-weight: 600;
       background-color: @bg-container-1;
-      box-shadow: none;
+      &:not(.ant-radio-button-wrapper-disabled):hover {
+        color: @primary-color;
+        background-color: #fff;
+      }
+      &:not(.ant-radio-button-wrapper-disabled):focus-within {
+        box-shadow: none;
+      }
     }
     &.ant-radio-button-wrapper-disabled {
       color: @text-color-placeholder;
