--- a/components/transfer/index.less
+++ b/components/transfer/index.less
@@ -22,13 +22,11 @@
     }
   }
   .ant-transfer-list-body {
+    padding: 8px;
     border-radius: 0px 0px 10px 10px;
-    .ant-transfer-list-content {
-      padding: 8px;
-    }
     &.ant-transfer-list-body-with-search {
       .ant-transfer-list-body-search-wrapper {
-        padding: 8px;
+        padding: 0px 0px 8px 0px;
         .ant-input-affix-wrapper.ant-transfer-list-search {
           height: 32px;
         }
@@ -37,7 +35,7 @@
     .ant-pagination.ant-transfer-list-pagination {
       display: flex;
       align-items: center;
-      padding: 8px 16px 12px;
+      padding: 8px 8px 12px;
       text-align: left;
       border: none;
     }
@@ -48,12 +46,20 @@
     padding: 12px 16px;
     color: @text-color;
     border-radius: 5px;
-    &:hover,
-    &.ant-transfer-list-content-item-checked:hover {
+    &:hover {
       background-color: @bg-page;
+      .ant-checkbox-wrapper .ant-checkbox .ant-checkbox-inner {
+        border-color: @radio-checkbox-hover-color;
+      }
     }
     &.ant-transfer-list-content-item-checked {
       background-color: @bg-container-1;
+      &:hover {
+        background-color: @bg-page;
+        .ant-checkbox-wrapper .ant-checkbox .ant-checkbox-inner {
+          border-color: @primary-color;
+        }
+      }
     }
   }
 
@@ -62,6 +68,11 @@
       background-color: @primary-color;
       border: 1.5px solid @primary-color;
       border-radius: 5px;
+      box-shadow: none;
+      &:hover {
+        background-color: @primary-color-hover;
+        border: 1.5px solid @primary-color-hover;
+      }
       svg {
         fill: @bg-container-1;
       }
