feat: tree组件check color修改

--- a/components/slider/index.less
+++ b/components/slider/index.less
@@ -15,6 +15,9 @@
   .ant-slider-rail {
     background-color: @bg-component-1-hover;
   }
+  .ant-slider-dot-active {
+    border-color: @primary-color;
+  }
 }
 
 .ant-slider-handle {
