--- a/components/Tree/index.less
+++ b/components/Tree/index.less
@@ -34,6 +34,11 @@
   }
 }
 
+.ant-tree-checkbox-checked .ant-tree-checkbox-inner {
+  background-color: @primary-color;
+  border-color: @primary-color;
+}
+
 .ant-tree-switcher {
   margin-right: 16px;
   color: @text-color-placeholder;
