--- a/components/checkbox/index.less
+++ b/components/checkbox/index.less
@@ -7,6 +7,7 @@
   // }
   .ant-checkbox .ant-checkbox-inner {
     border-color: @border-component;
+    border-radius: 3px;
   }
 
   .ant-checkbox.ant-checkbox-checked .ant-checkbox-inner {
@@ -54,6 +55,7 @@
 .ant-checkbox-wrapper.ant-checkbox-wrapper-checked {
   .ant-checkbox-checked::after {
     border-color: @primary-color;
+    border-radius: 3px;
   }
   &:hover .ant-checkbox.ant-checkbox-checked .ant-checkbox-inner {
     border-color: @primary-color;
