--- a/components/Tree/index.less
+++ b/components/Tree/index.less
@@ -34,9 +34,16 @@
   }
 }
 
-.ant-tree-checkbox-checked .ant-tree-checkbox-inner {
+.ant-tree-checkbox-checked:not(.ant-tree-checkbox-disabled) .ant-tree-checkbox-inner {
   background-color: @primary-color;
   border-color: @primary-color;
+}
+
+.ant-tree-checkbox-inner {
+  border-radius: 3px;
+  &:hover {
+    border-color: @primary-color;
+  }
 }
 
 .ant-tree-switcher {
