--- a/components/input/index.less
+++ b/components/input/index.less
@@ -17,6 +17,9 @@
 .ant-input.ant-input-lg,
 .ant-input-group > .ant-input.ant-input-lg {
   padding: 15.5px 12px;
+  &::placeholder {
+    font-size: 16px;
+  }
 }
 .ant-input.ant-input-sm,
 .ant-input-group > .ant-input.ant-input-sm {
@@ -92,6 +95,9 @@
 }
 .ant-input-affix-wrapper.ant-input-affix-wrapper-lg {
   padding: 15.5px 12px;
+  &::placeholder {
+    font-size: 16px;
+  }
 }
 .ant-input-affix-wrapper > input.ant-input:not(.ant-input-disabled),
 .ant-input-affix-wrapper > input.ant-input:not(.ant-input-disabled):hover,
