--- a/components/transfer/index.less
+++ b/components/transfer/index.less
@@ -48,9 +48,9 @@
     border-radius: 5px;
     &:hover {
       background-color: @bg-page;
-      .ant-checkbox-wrapper .ant-checkbox .ant-checkbox-inner {
-        border-color: @radio-checkbox-hover-color;
-      }
+      // .ant-checkbox-wrapper .ant-checkbox .ant-checkbox-inner {
+      // border-color: @radio-checkbox-hover-color;
+      // }
     }
     &.ant-transfer-list-content-item-checked {
       background-color: @bg-container-1;
